38097: changed design of TabBar

--- a/src/main/res/layout/chat_footer_send.xml
+++ b/src/main/res/layout/chat_footer_send.xml
@@ -5,16 +5,16 @@
     android:background="@color/bg_white"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
+    android:minHeight="48dp"
     android:orientation="horizontal">
 
     <ImageButton
         android:id="@+id/send_gift_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
-        android:background="@android:color/transparent"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:background="@drawable/input_buttons_selector"
+        android:padding="16dp"
         android:src="@drawable/btn_send_gift_selector" />
 
     <EditText
@@ -44,10 +44,10 @@
     <ImageButton
         android:id="@+id/btnSend"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:layout_marginRight="16dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/input_buttons_selector"
+        android:padding="16dp"
         android:src="@drawable/btn_send_message_selector" />
 
 </LinearLayout>
