--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -48,4 +48,8 @@
 
     <dimen name="avatar_rounded_padding">2dp</dimen>
 
+    <item name="actionbar_elevation" format="float" type="dimen">0.0</item>
+
+    <dimen name="tab_bar_default_bottom_border_height">1px</dimen>
+
 </resources>
