--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:focusableInTouchMode="true"
-    android:background="@color/bg_white">
+    android:background="@color/bg_white"
+    android:focusableInTouchMode="true">
 
     <!-- header bar -->
     <LinearLayout
@@ -13,9 +13,9 @@
 
         <com.topface.topface.ui.views.slidingtab.SlidingTabLayout
             android:id="@+id/tpiTabs"
-            android:background="@color/tab_background"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/tab_background" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vpFragments"
@@ -25,9 +25,9 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/outsideView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/outsideView"
         android:visibility="gone" />
 
     <ViewStub
@@ -36,15 +36,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp" />
 
     <RelativeLayout
+        android:id="@+id/lockScreen"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/bg_white"
-        android:visibility="gone"
-        android:id="@+id/lockScreen" />
+        android:visibility="gone" />
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/llvProfileLoading"
