--- a/src/main/res/layout/tab_indicator.xml
+++ b/src/main/res/layout/tab_indicator.xml
@@ -10,20 +10,21 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingTop="16dp"
+        android:layout_gravity="center"
+        android:minHeight="48dp"
+        android:orientation="horizontal"
         android:paddingBottom="16dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:paddingTop="16dp">
 
-    <TextView
-        android:id="@+id/tab_title"
-        style="@style/TabIndicatorHoloStyle.Title" />
+        <TextView
+            android:id="@+id/tab_title"
+            style="@style/TabIndicatorHoloStyle.Title" />
 
-    <TextView
-        android:id="@+id/tab_counter"
-        style="@style/TabIndicatorHoloStyle.Counter"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/tab_counter"
+            style="@style/TabIndicatorHoloStyle.Counter"
+            android:visibility="gone" />
     </LinearLayout>
 </FrameLayout>
