--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -817,9 +817,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="TabIndicatorHoloStyle.Title">
