--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -16,6 +16,8 @@
 
         <item name="android:windowTitleStyle">@style/CenterJustifyDialogTitle</item>
 
+        <item name="android:windowAnimationStyle">@null</item>
+
         <!-- Тема индикаторов для ViewPager -->
         <item name="vpiIconPageIndicatorStyle">@style/Widget.TopfaceIconPageIndicator</item>
         <item name="vpiTabPageIndicatorStyle">@style/Widget.TopfaceTabPageIndicator</item>
@@ -141,7 +143,7 @@
     </style>
 
     <style name="Theme.Topface.Chat">
-        <item name="android:windowBackground">@color/bg_holo</item>
+        <item name="android:windowBackground">@color/bg_white</item>
     </style>
 
     <style name="Theme.Topface.Gifts">
