--- a/src/main/res/layout/edit_dialog_buttons.xml
+++ b/src/main/res/layout/edit_dialog_buttons.xml
@@ -20,20 +20,14 @@
 
     <Button
         android:id="@+id/edit_dialog_cancel"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_dialog_button_heigh"
-        android:layout_below="@id/edit_dialog_buttons_top"
+        style="@style/ProfileEditDialogBth"
         android:layout_toLeftOf="@id/edit_dialog_center"
-        android:background="@null"
         android:text="@string/general_cancel" />
 
     <Button
         android:id="@+id/edit_dialog_save"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_dialog_button_heigh"
-        android:layout_below="@id/edit_dialog_buttons_top"
+        style="@style/ProfileEditDialogBth"
         android:layout_toRightOf="@id/edit_dialog_center"
-        android:background="@null"
         android:text="@string/save" />
 
 </RelativeLayout>
