--- a/src/main/res/drawable/btn_profile_dialog_selector.xml
+++ b/src/main/res/drawable/btn_profile_dialog_selector.xml
@@ -2,4 +2,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@color/default_line_indicator_selected_color" />
+    <item android:drawable="@android:color/transparent" />
 </selector>
