--- a/src/main/res/layout/fragment_dating.xml
+++ b/src/main/res/layout/fragment_dating.xml
@@ -2,7 +2,7 @@
 <com.topface.topface.ui.views.KeyboardListenerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/auth_bg">
+    android:background="@color/dating_fragment_background_color">
 
     <!-- Dating Album -->
     <com.topface.topface.ui.views.ImageSwitcher
