- returns old layout for abstractDialoFragment

--- a/src/main/res/layout/dialog_modal.xml
+++ b/src/main/res/layout/dialog_modal.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -10,19 +11,25 @@
         android:layout_centerInParent="true"
         android:fillViewport="true">
 
-        <FrameLayout
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
             android:id="@+id/loDialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <ViewStub
                 android:id="@+id/vsContent"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-        </FrameLayout>
-    </ScrollView>
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
 </RelativeLayout>
 
