--- a/src/main/res/layout/dialog_base.xml
+++ b/src/main/res/layout/dialog_base.xml
@@ -7,5 +7,5 @@
     <ViewStub
         android:id="@+id/vsContent"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="fill_parent" />
 </RelativeLayout>
