--- a/src/main/res/layout/item_user_gallery.xml
+++ b/src/main/res/layout/item_user_gallery.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/album_grid_item_bg">
 
     <com.topface.topface.ui.views.ImageViewRemote
         android:id="@+id/ivPhoto"
         style="@style/GalleryItem"/>
-        android:layout_centerInParent="true" />
-
 </FrameLayout>
