--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/title_clickable"
-        style="@style/ActionBarTitle"
+        style="@style/ActionBarItemClick"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
