--- a/src/main/res/menu/actions_avatar_and_menu.xml
+++ b/src/main/res/menu/actions_avatar_and_menu.xml
@@ -7,7 +7,11 @@
     <item
         android:id="@+id/action_profile"
         android:title="@string/profile_actions"
-        appcompat:actionLayout="@layout/actionbar_item_avatar_with_extra_paddings"
+        appcompat:actionLayout="@layout/actionbar_item_avatar"
         appcompat:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
+    <item
+        android:id="@+id/tempItem"
+        android:title=""
+        appcompat:showAsAction="never" />
 </menu>
