--- a/src/main/res/values-v21/styles.xml
+++ b/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="ActionBarTitle">
+    <style name="ActionBarItemClick">
         <item name="android:background">@drawable/actionbar_pressed_animation</item>
     </style>
 </resources>
