--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -351,9 +351,10 @@
 
     <style name="ListMessageText">
         <item name="android:singleLine">true</item>
+        <item name="android:lines">2</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/list_text_gray</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">11sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
