--- a/src/main/res/layout/item_contact_layout.xml
+++ b/src/main/res/layout/item_contact_layout.xml
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/contact_content"
-            style="@style/ListMessageText"
+            style="@style/ListMessageText.InviteContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="+79876543210" />
@@ -57,7 +57,7 @@
 
         <TextView
             android:id="@+id/contact_invited_text"
-            style="@style/ListMessageText"
+            style="@style/ListMessageText.InviteContact"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
