--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -354,8 +354,12 @@
         <item name="android:lines">2</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/list_text_gray</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ListMessageText.InviteContact">
+        <item name="android:textSize">11sp</item>
     </style>
 
     <style name="AdDescriptionText" parent="ListMessageText">
