#38983 Заменил сердечки (симпатия и взаимная), выпилил костыли 2.3 (бэкграунд для итема в фидах) (cherry picked from commit a5e508b)

--- a/src/main/res/layout/item_feed_layout_heart.xml
+++ b/src/main/res/layout/item_feed_layout_heart.xml
@@ -7,9 +7,9 @@
         android:id="@+id/ifp_avatar"
         layout="@layout/item_feed_part_avatar" />
 
-    <include
+    <ImageView
         android:id="@+id/ifp_heart"
-        layout="@layout/item_feed_part_heart" />
+        style="@style/FeedHeart" />
 
     <LinearLayout
         android:layout_width="wrap_content"
