--- a/src/main/res/layout/item_feed_layout_photo_blog.xml
+++ b/src/main/res/layout/item_feed_layout_photo_blog.xml
@@ -6,9 +6,10 @@
         android:id="@+id/ifp_avatar"
         layout="@layout/item_feed_part_avatar_photoblog" />
 
-    <include
+
+    <ImageView
         android:id="@+id/ifp_heart"
-        layout="@layout/item_feed_part_heart" />
+        style="@style/FeedHeart" />
 
     <LinearLayout
         android:layout_width="wrap_content"
