--- a/src/main/res/color/left_menu_text.xml
+++ b/src/main/res/color/left_menu_text.xml
@@ -2,6 +2,8 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:color="#3f3f3f" />
-    <item android:state_pressed="true" android:color="#41b5f5" />
+    <item android:state_pressed="true" android:color="@color/left_menu_blue" />
+    <item android:state_activated="true" android:color="@color/left_menu_blue" />
+    <item android:state_selected="true" android:color="@color/left_menu_blue" />
     <item android:color="#3f3f3f" />
 </selector>
