--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -418,6 +418,7 @@
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:tint">@null</item>
+        <item name="android:src">@drawable/heart_selector</item>
     </style>
 
     <style name="NavigationBarAvatar">
