--- a/src/main/res/layout/item_user_gallery.xml
+++ b/src/main/res/layout/item_user_gallery.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:foreground="@drawable/feed_avatar_overlay_selector"
     android:background="@color/album_grid_item_bg">
 
     <com.topface.topface.ui.views.ImageViewRemote
