--- a/src/main/res/color/left_menu_text.xml
+++ b/src/main/res/color/left_menu_text.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="#3f3f3f" />
-    <item android:state_pressed="true" android:color="@color/left_menu_blue" />
+    <item android:state_enabled="false" android:color="@color/text_left_menu" />
     <item android:state_activated="true" android:color="@color/left_menu_blue" />
     <item android:state_selected="true" android:color="@color/left_menu_blue" />
-    <item android:color="#3f3f3f" />
+    <item android:color="@color/text_left_menu" />
 </selector>
