--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
+    <style name="Widget">
+    </style>
+
     <style name="Widget.Topface.ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="backgroundStacked">@color/action_bar_color</item>
         <item name="backgroundSplit">@color/action_bar_color</item>
@@ -584,38 +587,6 @@
         <item name="android:layout_marginLeft">6dp</item>
         <item name="android:layout_width">72dp</item>
         <item name="android:layout_height">72dp</item>
-    </style>
-
-    <style name="TopfaceCirclePageIndicator">
-        <item name="pageColor">#99FFFFFF</item>
-        <item name="fillColor">#FFFFFFFF</item>
-        <item name="strokeWidth">0dp</item>
-        <item name="radius">3dp</item>
-        <item name="android:padding">0dp</item>
-    </style>
-
-    <style name="Widget.TopfaceTabPageIndicator" parent="Widget">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:background">@drawable/topface_tab_indicator</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:paddingRight">20dp</item>
-        <item name="android:paddingTop">8dp</item>
-        <item name="android:paddingBottom">10dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.TopfaceTabPageIndicator</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:singleLine">true</item>
-    </style>
-
-    <style name="TextAppearance.TopfaceTabPageIndicator" parent="Widget">
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/vpi__dark_theme</item>
-    </style>
-
-    <style name="Widget.TopfaceIconPageIndicator" parent="Widget">
-        <item name="android:layout_marginLeft">6dp</item>
-        <item name="android:layout_marginRight">6dp</item>
     </style>
 
     <style name="TopfaceTextAppearance">
