--- a/src/main/res/values/strings-profile.xml
+++ b/src/main/res/values/strings-profile.xml
@@ -4,12 +4,12 @@
     <string name="profile_form_status_male_1">To find friends with benefits</string>
     <string name="profile_form_status_male_2">To make friends</string>
     <string name="profile_form_status_male_3">To get tons of likes</string>
-    <string name="profile_form_status_male_4">I\'m here to chat away</string>
+    <string name="profile_form_status_male_4">I\'m here to chat</string>
     <string name="profile_form_status_female_0">To find my own true love</string>
     <string name="profile_form_status_female_1">To find friends with benefits</string>
     <string name="profile_form_status_female_2">To make friends</string>
     <string name="profile_form_status_female_3">To get tons of likes</string>
-    <string name="profile_form_status_female_4">I\'m here to chat away</string>
+    <string name="profile_form_status_female_4">I\'m here to chat</string>
     <string name="profile_form_education_male_0">High school diploma</string>
     <string name="profile_form_education_male_1">College student</string>
     <string name="profile_form_education_male_2">BA or above</string>
@@ -25,11 +25,11 @@
     <string name="profile_form_education_female_5">Not even a school diploma</string>
     <string name="profile_form_education_female_6">I\'m just very smart</string>
     <string name="profile_form_communication_male_0">Very sociable</string>
-    <string name="profile_form_communication_male_1">Easygoing</string>
+    <string name="profile_form_communication_male_1">Open to Interesting People</string>
     <string name="profile_form_communication_male_2">Let\'s chat and we\'ll see</string>
     <string name="profile_form_communication_male_3">Replying only to those I like</string>
     <string name="profile_form_communication_female_0">Quite sociable</string>
-    <string name="profile_form_communication_female_1">Easygoing</string>
+    <string name="profile_form_communication_female_1">Open to Interesting People</string>
     <string name="profile_form_communication_female_2">Let\'s chat and we\'ll see</string>
     <string name="profile_form_communication_female_3">Replying only to those I like</string>
     <string name="profile_form_character_male_0">Easy</string>
@@ -38,14 +38,14 @@
     <string name="profile_form_character_male_3">Moderate</string>
     <string name="profile_form_character_male_4">Calm</string>
     <string name="profile_form_character_male_5">Restless</string>
-    <string name="profile_form_character_male_6">Nobody has complained yet</string>
+    <string name="profile_form_character_male_6">Nobody\'s complained yet</string>
     <string name="profile_form_character_female_0">Easy</string>
     <string name="profile_form_character_female_1">Tough</string>
     <string name="profile_form_character_female_2">Firm</string>
     <string name="profile_form_character_female_3">Moderate</string>
     <string name="profile_form_character_female_4">Calm</string>
     <string name="profile_form_character_female_5">Restless</string>
-    <string name="profile_form_character_female_6">Nobody has complained yet</string>
+    <string name="profile_form_character_female_6">Noone\'s complained yet</string>
     <string name="profile_form_alcohol_male_0">Quite happy without it</string>
     <string name="profile_form_alcohol_male_1">No more</string>
     <string name="profile_form_alcohol_male_2">Sometimes</string>
@@ -65,11 +65,11 @@
     <string name="profile_form_fitness_female_0">Athletic</string>
     <string name="profile_form_fitness_female_1">Slim</string>
     <string name="profile_form_fitness_female_2">Skinny</string>
-    <string name="profile_form_fitness_female_3">Model type</string>
+    <string name="profile_form_fitness_female_3">Model</string>
     <string name="profile_form_fitness_female_4">Curvy</string>
     <string name="profile_form_fitness_female_5">Big is the new sexy</string>
     <string name="profile_form_marriage_male_0">Not yet</string>
-    <string name="profile_form_marriage_male_1">Already not</string>
+    <string name="profile_form_marriage_male_1">Not Anymore</string>
     <string name="profile_form_marriage_male_2">In a relationship</string>
     <string name="profile_form_marriage_male_3">Yet</string>
     <string name="profile_form_marriage_male_4">Yes</string>
@@ -77,8 +77,8 @@
     <string name="profile_form_marriage_male_6">Is that a problem?</string>
     <string name="profile_form_marriage_male_7">God, no</string>
     <string name="profile_form_marriage_female_0">Not yet</string>
-    <string name="profile_form_marriage_female_1">Already not</string>
-    <string name="profile_form_marriage_female_2">In a relationship</string>
+    <string name="profile_form_marriage_female_1">Not Anymore</string>
+    <string name="profile_form_marriage_female_2">In a Relationship</string>
     <string name="profile_form_marriage_female_3">Yet</string>
     <string name="profile_form_marriage_female_4">Yes</string>
     <string name="profile_form_marriage_female_5">Forever</string>
@@ -88,14 +88,14 @@
     <string name="profile_form_finances_male_1">High</string>
     <string name="profile_form_finances_male_2">Above average</string>
     <string name="profile_form_finances_male_3">Average, but stable income</string>
-    <string name="profile_form_finances_male_4">Money doesn\'t matter</string>
+    <string name="profile_form_finances_male_4">Money isn\'t everything</string>
     <string name="profile_form_finances_male_5">Enough for me</string>
     <string name="profile_form_finances_male_6">Financial aid needed</string>
     <string name="profile_form_finances_female_0">Very high</string>
     <string name="profile_form_finances_female_1">High</string>
     <string name="profile_form_finances_female_2">Above average</string>
     <string name="profile_form_finances_female_3">Average, but stable income</string>
-    <string name="profile_form_finances_female_4">Money doesn\'t matter</string>
+    <string name="profile_form_finances_female_4">Money isn\'t everything</string>
     <string name="profile_form_finances_female_5">Enough for me</string>
     <string name="profile_form_finances_female_6">Financial aid needed</string>
     <string name="profile_form_smoking_male_0">Never tried</string>
@@ -145,15 +145,15 @@
     <string name="profile_form_residence_male_1">With my wife</string>
     <string name="profile_form_residence_male_2">With my girlfriend</string>
     <string name="profile_form_residence_male_3">With friends</string>
-    <string name="profile_form_residence_male_4">Alone, I rent a place</string>
-    <string name="profile_form_residence_male_5">Alone, in my own place</string>
+    <string name="profile_form_residence_male_4">Single - I rent a place</string>
+    <string name="profile_form_residence_male_5">Single - I have my own place</string>
     <string name="profile_form_residence_male_6">Wherever</string>
     <string name="profile_form_residence_female_0">With parents</string>
     <string name="profile_form_residence_female_1">With my husband</string>
     <string name="profile_form_residence_female_2">With my boyfriend</string>
     <string name="profile_form_residence_female_3">With friends</string>
-    <string name="profile_form_residence_female_4">Alone, I rent a place</string>
-    <string name="profile_form_residence_female_5">Alone in my apartment</string>
+    <string name="profile_form_residence_female_4">Single - I rent a place</string>
+    <string name="profile_form_residence_female_5">Single - I have my own place</string>
     <string name="profile_form_residence_female_6">Wherever</string>
     <string name="profile_form_car_male_0">Yes</string>
     <string name="profile_form_car_male_1">No</string>
@@ -201,10 +201,10 @@
     <string name="form_social_finances_1">Income</string>
     <string name="form_social_finances_2">Your income</string>
     <string name="form_social_finances_3">Your income</string>
-    <string name="form_social_residence_0">Accommodations</string>
-    <string name="form_social_residence_1">Accommodations</string>
-    <string name="form_social_residence_2">Your accommodations</string>
-    <string name="form_social_residence_3">Your accommodations</string>
+    <string name="form_social_residence_0">Accommodation</string>
+    <string name="form_social_residence_1">Accommodation</string>
+    <string name="form_social_residence_2">Your accommodation</string>
+    <string name="form_social_residence_3">Your accommodation</string>
     <string name="form_social_car_0">Car</string>
     <string name="form_social_car_1">Car</string>
     <string name="form_social_car_2">Do you have a car?</string>
