--- a/src/main/res/values/constants.xml
+++ b/src/main/res/values/constants.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+    <!--Количество фидов, которые сохраним в кеш на смартфоне-->
+    <integer name="feeds_count_to_cache">15</integer>
     <!-- settings -->
     <string name="settings_topface_url">http://topface.com</string>
     <string name="settings_topface_url_title">topface.com</string>
