--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -121,6 +121,8 @@
     <style name="Theme.Topface.NoActionBar" parent="Theme.Topface">
         <item name="android:windowNoTitle">true</item>
         <!--Action Bar-->
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
