--- a/src/main/res/layout/promo_express_messages.xml
+++ b/src/main/res/layout/promo_express_messages.xml
@@ -2,83 +2,88 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/loInvitesPopup"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_60_percent">
+    android:background="@color/black_60_percent"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@color/bg_white">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_white"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/airMessagesTitle"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:gravity="center"
-            style="@style/TitleBlackText"
-            android:textSize="14sp"
-            android:text="@string/general_attention"
-            android:minHeight="50dp" />
+            android:orientation="horizontal"
+            android:paddingBottom="44dp"
+            android:paddingTop="72dp">
+
+            <com.topface.topface.ui.views.ImageViewRemote
+                android:id="@+id/firstFakeUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="8dp"
+                android:src="@drawable/fake_girl1" />
+
+            <com.topface.topface.ui.views.ImageViewRemote
+                android:id="@+id/secondFakeUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="8dp"
+                android:src="@drawable/fake_girl2" />
+
+            <com.topface.topface.ui.views.ImageViewRemote
+                android:id="@+id/thirdFakeUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/fake_girl3" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/airMessagesText"
+            style="@style/TitleBlackText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/airMessagesTitle"
             android:gravity="center"
-            style="@style/TitleBlackText"
-            android:textSize="13sp"
+            android:paddingBottom="24dp"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp" />
-
-        <View
-            android:id="@+id/fakeView"
-            android:layout_height="0dp"
-            android:layout_width="0dp"
-            android:layout_below="@+id/airMessagesText"
-            android:layout_centerHorizontal="true" />
+            android:textSize="16sp"
+            android:textStyle="normal" />
 
         <Button
-            style="@style/Widget.Topface.Button.Big.Blue"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:layout_alignRight="@id/fakeView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@id/fakeView"
             android:id="@+id/buyVip"
-            android:text="@string/buying_vip_status"
-            android:layout_marginRight="2dp"
-            android:padding="6dp"
+            style="@style/Widget.Topface.Button.Big.Blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/btn_blue_selector"
             android:ellipsize="end"
+            android:minWidth="204dp"
             android:singleLine="true"
-            android:textSize="14sp" />
+            android:text="@string/buying_vip_status" />
 
         <Button
-            style="@style/Widget.Topface.Button.Big.Gray"
             android:id="@+id/deleteMessages"
+            style="@style/Widget.Topface.Button.Big.Gray"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:layout_alignTop="@id/fakeView"
-            android:layout_alignLeft="@id/fakeView"
-            android:text="@string/general_delete_messages"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="2dp"
-            android:padding="6dp"
+            android:background="@drawable/btn_red_selector"
             android:ellipsize="end"
+            android:minWidth="204dp"
             android:singleLine="true"
-            android:textSize="14sp" />
+            android:text="@string/general_delete_messages" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/ipLocker"
-        android:visibility="gone"
-        style="@style/LoadingLocker" />
+        style="@style/LoadingLocker"
+        android:visibility="gone" />
 
 </RelativeLayout>
