--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -2,21 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_white"
     android:focusableInTouchMode="true">
 
-    <com.topface.topface.ui.views.slidingtab.SlidingTabLayout
-        android:id="@+id/tpiTabs"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/profileTabs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="@color/tab_background" />
+        app:tabSelectedTextColor="@color/tab_text_color"
+        app:theme="@style/TabIndicatorHoloStyle"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/tab_text_color" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vpFragments"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tpiTabs" />
+        android:layout_below="@id/profileTabs" />
 
     <com.topface.topface.ui.views.ProgressBarWithAlpha
         android:id="@+id/viewPagerLoader"
