--- a/src/main/res/layout/purchases_fragment.xml
+++ b/src/main/res/layout/purchases_fragment.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/purchaseLayout"
     android:layout_width="fill_parent"
     android:background="@color/bg_white"
     android:layout_height="fill_parent">
 
-    <com.topface.topface.ui.views.slidingtab.SlidingTabLayout
+    <android.support.design.widget.TabLayout
         android:id="@+id/purchasesTabs"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/tab_background" />
+        app:tabSelectedTextColor="@color/tab_text_color"
+        app:theme="@style/TabIndicatorHoloStyle"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/tab_text_color" />
 
 
     <android.support.v4.view.ViewPager
