--- a/src/main/res/drawable/btn_sale_gray_pressed.xml
+++ b/src/main/res/drawable/btn_sale_gray_pressed.xml
@@ -2,13 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="2dp" />
-            <solid android:color="#8B8B8B" />
+            <corners android:radius="5dp" />
+            <solid android:color="#fcfcfc" />
         </shape>
     </item>
     <item>
         <bitmap
-            android:src="@drawable/marker_pressed"
-            android:gravity="right|top" />
+            android:gravity="right|top"
+            android:src="@drawable/marker_pressed" />
     </item>
 </layer-list>
