--- a/src/main/res/layout/fragment_buy_editor.xml
+++ b/src/main/res/layout/fragment_buy_editor.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:layout_width="match_parent">
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <include
-        android:layout_marginTop="10dp"
         android:id="@+id/EditorTestBuyCheckBox"
+        layout="@layout/editor_form_switch"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        layout="@layout/editor_form_switch" />
+        android:layout_marginTop="10dp" />
 </FrameLayout>
