--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -69,7 +69,8 @@
 
     <!--filter light edit form dialog background selector color-->
     <color name="edit_form_selector_background_color_release_state">#FFFFFF</color>
-    <color name="edit_form_selector_background_color_pressed_state">@color/blue_holo_selected</color>
+    <color name="edit_form_selector_background_color_pressed_state">@color/blue_holo_selected
+    </color>
 
     <!--filter fragment dividers color-->
     <color name="filter_fragment_divider_color">#E2E2E2</color>
@@ -93,4 +94,12 @@
     <color name="trial_popup_background">#242429</color>
 
     <color name="default_line_indicator_selected_color">@color/blue_holo_selected</color>
+
+    <color name="button_gray_text_pressed_color">#4B4B4B</color>
+    <color name="button_gray_text_released_color">#4B4B4B</color>
+    <color name="button_gray_text_disable_color">#c3c3c3</color>
+
+    <color name="button_blue_text_pressed_color">#FFFFFF</color>
+    <color name="button_blue_text_released_color">#FFFFFF</color>
+    <color name="button_blue_text_disable_color">#FFFFFF</color>
 </resources>
