--- a/src/main/res/layout/item_contact_layout.xml
+++ b/src/main/res/layout/item_contact_layout.xml
@@ -43,8 +43,8 @@
             android:id="@+id/contact_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:gravity="center" />
 
         <Button
             android:id="@+id/contact_invite_button"
