--- a/src/main/res/drawable/btn_gray_selector.xml
+++ b/src/main/res/drawable/btn_gray_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/btn_gray_shape_pressed" />
-    <item android:state_selected="true" android:drawable="@drawable/btn_gray_shape_pressed" />
-    <item android:state_enabled="false" android:drawable="@drawable/btn_gray_shape_disabled" />
-    <item android:drawable="@drawable/btn_gray_shape_normal" />
+    <item android:drawable="@drawable/btn_gray_shape_with_shadow_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/btn_gray_shape_with_shadow_pressed" android:state_selected="true" />
+    <item android:drawable="@drawable/btn_gray_shape_with_shadow_disabled" android:state_enabled="false" />
+    <item android:drawable="@drawable/btn_gray_shape_with_shadow_normal" />
 </selector>
