--- a/src/main/res/layout/fragment_buy_editor.xml
+++ b/src/main/res/layout/fragment_buy_editor.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:layout_height="wrap_content">
 
     <include
         android:id="@+id/EditorTestBuyCheckBox"
