--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -39,14 +39,14 @@
         <item name="blueButtonStyle">@style/BlueBonusButton</item>
         <item name="grayButtonStyle">@style/GrayBonusButton</item>
         <!-- ActionBar  -->
+        <item name="windowActionModeOverlay">true</item>
         <item name="actionBarStyle">@style/Widget.Topface.ActionBar</item>
         <item name="actionBarItemBackground">@drawable/bg_semitransparent_black_selector</item>
         <item name="selectableItemBackground">@drawable/bg_semitransparent_black_selector</item>
         <item name="actionBarSize">?android:attr/actionBarSize</item>
         <!-- Action Mode (CAB)-->
-        <item name="actionModeBackground">@color/bg_action_mode</item>
+        <item name="actionModeBackground">@color/action_bar_color</item>
         <item name="actionModeCloseDrawable">@drawable/ic_check</item>
-
         <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
     </style>
 
