--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Widget">
-    </style>
+    <style name="Widget"></style>
 
     <style name="Widget.Topface.ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="backgroundStacked">@color/action_bar_color</item>
@@ -1121,5 +1120,4 @@
         <item name="android:textColor">#1F1F1F</item>
         <item name="android:textSize">14sp</item>
     </style>
-
 </resources>
